# wordle_daegeun_kim

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_dk3481/: __init__.py  wordle_dk3481.py
tests/: test_wordle_dk3481.py
