[tool.poetry]
name = "wordle_dk3481"
version = "0.1.0"
description = "HW7 wordle python package"
authors = ["Daegeun Kim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
